# old-course

./: .clang-format  .gitignore  CMakeLists.txt
data/: start.txt
include/: Builder.h  Circle.h  Composite.h  Ellipse.h  Figure.h  FigureSaver.h  Hexagon.h  Memento.h  Programm.h  Rectangle.h  Star.h  Triangle.h  Viewport.h
src/: Builder.cpp  Circle.cpp  Composite.cpp  Ellipse.cpp  Figure.cpp  FigureSaver.cpp  Hexagon.cpp  Main.cpp  Memento.cpp  Programm.cpp  Rectangle.cpp  Star.cpp  Triangle.cpp  Viewport.cpp
